# MyGis

./: .gitignore  CMakeLists.txt  MyGis.sln  openlayer.js
MyGis/: MyGis.vcxproj  MyGis.vcxproj.filters  main.cpp
MyGis/Core/: HashFunction.hpp  Map.cpp  Map.h  MapSettings.cpp  MapSettings.h  MyGisDefs.h  RWLock.cpp  RWLock.h  ReadWriteLocker.cpp  ReadWriteLocker.h  Rectangle.h  RectangleExtent.cpp  RectangleExtent.h  Semaphore.cpp  Semaphore.h  ThreadPool.cpp  ThreadPool.h  TileDefsHashFunctions.h
MyGis/Layer/: ImageLayer.h
MyGis/Layer/TMS/: TmsImageLayer.cpp  TmsImageLayer.h  TmsLayer.cpp  TmsLayer.h
MyGis/Map/: MapItemMap.cpp  MapItemMap.h
MyGis/Proj/: MercatorProjection.cpp  MercatorProjection.h  Projection.h
MyGis/Source/: ImageSource.h
MyGis/Source/TMS/: TmsImageSource.cpp  TmsImageSource.h
MyGis/View/: MyGisView.cpp  MyGisView.h
MyGis/Widgets/: MyGisWidget.cpp  MyGisWidget.h  MyGisWidget.ui
